# ipsilateral-cuff-crt-mimic

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml  pyrightconfig.json
data/: README.md
figures/: fig_concordance_counts.csv  table_sensitivity_summary.csv
findings/: preregistration_detector.md
manuscript/: README.md  captions.md  references.bib
prompts/: adjudicate_system.txt  adjudicate_system_v_compact.txt  adjudicate_system_v_explicit.txt  adjudicate_system_v_terse_criteria.txt  adjudicate_user.txt
scripts/: 10_link_wdb_to_icustay.py  20_extract_cuff_events.py  22_consolidate_inventory.py  30_aggregate_funnel.py  31_sensitivity_sweep.py  32_alignment_split_half.py  33_write_manifest.py  40_medgemma_inference.py  41_run_medgemma_adjudication.py  42_prompt_sensitivity.py  43_determinism_rerun.py  44_precision_recall.py  45_prompt_sensitivity_concordance.py  46_population_reweight.py  47_fig_precision_recall.py  50_figures.py  51_candidate_gallery.py  52_build_adjudication_app.py  53_disagreement_figure.py  54_flow_diagram.py  55_concordance_overview.py  56_sensitivity_table.py  58_fig_hero_cycle.py  59_fig_signature_definition.py  60_stage_blinded_reread.py  61_reread_recompute.py  62_reread_sensitivity.py  63_fig_morphology_density.py  64_fig_patient_traces.py  compute_model_sha.sh
tests/: test_adjudication_app.py  test_alignment_split_half.py  test_bootstrap.py  test_candidate_gallery.py  test_card_bridge.py  test_concordance_overview.py  test_cuff_event_detector.py  test_determinism_rerun.py  test_disagreement_figure.py  test_flow_diagram.py  test_funnel.py  test_inventory.py  (+14 more)
(+24 files in other folders)
