[project]
name = "cuffcrt"
version = "0.1.0"
description = "Feasibility of cuff-occlusion capillary-refill signals from ICU photoplethysmography in MIMIC-IV-WDB"
authors = [
    { name = "Thomas C. Landry, MD", email = "tlandry@lhs.org" },
    { name = "Youjin Kim, MD" },
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "polars>=1.0",
    "pandas>=2.0",
    "wfdb>=4.1",
    "matplotlib>=3.8",
    "loguru>=0.7",
]

[project.optional-dependencies]
# Local-LLM step (MedGemma served by oMLX, OpenAI-compatible). Users run their own server.
llm = ["openai>=1.0", "python-dotenv>=1.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.6", "hypothesis>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuffcrt"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY"]

[tool.ruff.lint.per-file-ignores]
# The adjudication app builder embeds an HTML/CSS/JS template as a string
# literal; wrapping those content lines to 100 cols would harm readability.
"scripts/52_build_adjudication_app.py" = ["E501"]
# Same for the blinded re-read stager: it embeds the reread.html template.
"scripts/60_stage_blinded_reread.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "scripts", "tests"]
pythonVersion = "3.11"
